# get-papers-list

./: .gitignore  README.md  diabetes_results.csv  get_papers_list.py  pubmed_papers.csv  pyproject.toml
get_papers_list/: cli.py  get_papers_list.py  pubmed.py  pyproject.toml
