[project]
name = "get-papers-list"
version = "0.1.0"
description = "Fetch PubMed papers with pharma/biotech authors and export to CSV"
authors = [
    {name = "saffiyashabeen",email = "saffiyashabeen@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.13.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
get-papers-list = "get_papers_list:app"
