[tool.poetry]
name = "get-papers-list"
version = "0.1.1"
description = "Fetch PubMed papers with pharma/biotech authors and export to CSV"
authors = ["saffiyashabeen <saffiyashabeen@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "get_papers_list" }]

[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.32.4"
lxml = "^6.0.0"
beautifulsoup4 = "^4.13.4"
pandas = "^2.3.1"
typer = "^0.16.0"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:app"

[tool.poetry.group.dev.dependencies]
twine = "^6.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
